# oBIX

./: pyproject.toml
oBIX/client/: client.py
