# [build-system]
# requires = ["setuptools", "setuptools-scm"]
# build-backend = "setuptools.build_meta"

[project]
name = "oBIX"
description = "oBIX Python Driver"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["oBIX", "python", "driver"]
license = {text = "MIT"}
classifiers = [
    "Driver :: oBIX",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "xmltodict==0.14.2",
    "requests==2.32.3",
    "urllib3==2.2.3",
    "pytz==2024.2",
    "iupdatable==0.3.1",
]

dynamic = ["version"]

[tool.black]
line-length = 120


# [project.scripts]
# my-script = "my_package.module:function"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/